--- a/cvlab/templates/deployment.yaml
+++ b/cvlab/templates/deployment.yaml
@@ -8,8 +8,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{.Values.name}}
-data:
-  {{.Values.env.config | toYaml | indent 2}}
+data: {{.Values.env.config | toYaml | indent 2}}
 {{- end}}
 
 
