--- a/cvlab/templates/deployment.yaml
+++ b/cvlab/templates/deployment.yaml
@@ -9,7 +9,7 @@ kind: ConfigMap
 metadata:
   name: {{.Values.name}}
 data: 
-  {{.Values.env.config | toYaml | indent 2}}
+  ALLOWED_ORIGINS: http://192.168.49.2:30728
 {{- end}}
 
 
