--- a/cvlab/templates/deployment.yaml
+++ b/cvlab/templates/deployment.yaml
@@ -9,7 +9,7 @@ kind: ConfigMap
 metadata:
   name: {{.Values.name}}
 data: 
-  ALLOWED_ORIGINS: http://192.168.49.2:30728
+  {{- toYaml .Values.env.config | indent 2}}
 {{- end}}
 
 
