--- a/cvlab/templates/deployment.yaml
+++ b/cvlab/templates/deployment.yaml
@@ -9,7 +9,7 @@ kind: ConfigMap
 metadata:
   name: {{.Values.name}}
 data: 
-  {{- toYaml .Values.env.config | indent 2}}
+  {{.Values.env.config | indent 2}}
 {{- end}}
 
 
