--- a/cvlab/templates/deployment.yaml
+++ b/cvlab/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{.Values.namespace}}
+---
 
 {{- if .Values.env.config}}
 apiVersion: v1
@@ -9,7 +10,8 @@ kind: ConfigMap
 metadata:
   name: {{.Values.name}}
 data: 
-{{.Values.env.config | toYaml | indent 2}}
+{{.Values.env.config | toYaml | ndent 2}}
+---
 {{- end}}
 
 
