--- a/cvlab/templates/deployment.yaml
+++ b/cvlab/templates/deployment.yaml
@@ -10,7 +10,7 @@ kind: ConfigMap
 metadata:
   name: {{.Values.name}}
 data: 
-{{.Values.env.config | toYaml | ndent 2}}
+{{.Values.env.config | toYaml | indent 2}}
 ---
 {{- end}}
 
