--- a/Setup/Applications/Kubernetes - Admin Course/Environments/Prod-Environment/Infrastructure Definitions/prometheus-ns.yaml
+++ b/Setup/Applications/Kubernetes - Admin Course/Environments/Prod-Environment/Infrastructure Definitions/prometheus-ns.yaml
@@ -5,5 +5,5 @@ deploymentType: KUBERNETES
 infrastructure:
 - type: DIRECT_KUBERNETES
   cloudProviderName: My Kubernetes Cluster
-  namespace: prometheus
+  namespace: prometheus2
   releaseName: release-${infra.kubernetes.infraId}
